# Penance

./: CMakeLists.txt  penance.sh
.cache/clangd/index/: glad.c.3FC81DD3B7FE3E83.idx  glad.c.94DE9217DDD1D31A.idx  glad.c.BD4F9A1B01C55435.idx  glad.h.832DA326089C6186.idx  glad.h.AF435CBDF0A91E27.idx  glad.h.E444FDDE7AA2DF7A.idx  imconfig.h.8321C9619583D7C7.idx  imgui.cpp.C5167A97D6907EBB.idx  imgui.h.750FF689F54B99C0.idx  imgui_draw.cpp.33CCE63D67D2AA28.idx  imgui_impl_opengl3.cpp.C9A6244976B2EBA1.idx  imgui_impl_opengl3.h.5C5D6B38A44785C4.idx  imgui_impl_opengl3_loader.h.3BD664F79C3866A3.idx  imgui_impl_sdl2.cpp.99FE2C6510A5C202.idx  imgui_impl_sdl2.h.10A84CB4CA2D58D0.idx  imgui_internal.h.B4030F16A215EE36.idx  imgui_tables.cpp.0E949D5D96FC5F0D.idx  imgui_widgets.cpp.333BE25B56E23A9C.idx  imstb_rectpack.h.F2B77830D4DBD267.idx  imstb_textedit.h.124E3B6B4D78A9AC.idx  imstb_truetype.h.1D29E6F93C60E5A6.idx  khrplatform.h.2FACC37B72E7E808.idx  khrplatform.h.4309CE81553600C5.idx  khrplatform.h.97AB15B9610C6411.idx  main.cpp.10086ADC2B4CB8CD.idx  main.cpp.9839C8B865F7E3F9.idx  main.cpp.F9C380B4DB3D1CB4.idx  mesh.cpp.3A42962BB3388A65.idx  mesh.cpp.A387498289D88CFE.idx  mesh.cpp.AB40225BA966D3A5.idx  mesh.h.0BF2EFC2614D716A.idx  mesh.h.3E36B684C0A8E8C9.idx  mesh.h.40E15934CDEC303D.idx  shader.cpp.7605DD7B32B1914B.idx  shader.cpp.E0075CD362DED6CB.idx  shader.cpp.E0F16B4964286C5B.idx  shader.h.4FA534D8AAD249F3.idx  shader.h.C51D5F3E5F4BCD41.idx  shader.h.F81142E8D56A4BD5.idx  transform.cpp.4CCEDDE6725E1A54.idx  (+6 more)
assets/shaders/: triangle.frag  triangle.vert
include/glad/: glad.h
src/: glad.c  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h  transform.cpp  transform.h  ui.h
